--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ section {
 }
 
 .header.scrolled {
-    padding: 10px 0;
+    /* padding: 10px 0; */
     background-color: rgba(255, 255, 255, 0.95);
 }
 
@@ -456,8 +456,8 @@ section {
 
 .popular-badge {
     position: absolute;
-    top: -10px;
-    right: 20px;
+    top: -5px;
+    right: 30px;
     background-color: var(--primary-color);
     color: var(--white);
     padding: 5px 15px;
