--- a/multi-page/css/style.css
+++ b/multi-page/css/style.css
@@ -43,7 +43,7 @@ section {
 
 .section-title {
     font-size: 2.5rem;
-    margin-bottom: 20px;
+    margin-bottom: 100px;
     text-align: center;
     color: var(--primary-color);
     position: relative;
@@ -285,12 +285,12 @@ section {
 
 .wifiimg {
     position: absolute;
-    top: -45px;
-    left: 1px;
+    top: -18px;
+    left: 15px
 }
 
 .wifiimg img {
-    width: 100px;
+    width: 70px;
     height: auto;
 }
 
@@ -378,6 +378,7 @@ section {
         transform: translate(-50%, -50%) scale(0.5);
         opacity: 0.5;
     }
+
     100% {
         transform: translate(-50%, -50%) scale(1.5);
         opacity: 0;
@@ -996,6 +997,10 @@ section {
     margin-bottom: 20px;
 }
 
+.logo .footer-logo a {
+    padding-bottom: 10px;
+}
+
 .footer-about p {
     margin-bottom: 20px;
     color: rgba(255, 255, 255, 0.7);
@@ -1070,6 +1075,20 @@ section {
     border-top: 1px solid rgba(255, 255, 255, 0.1);
     color: rgba(255, 255, 255, 0.5);
     font-size: 0.9rem;
+}
+
+.footer-bottom a {
+    color: rgba(255, 255, 255, 0.829);
+}
+
+.footer-bottom a:hover {
+    color: red;
+    text-decoration: wavy;
+    transition: all .3s ease;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
 }
 
 .footer-bottom p {
@@ -1193,6 +1212,3 @@ section {
         padding: 15px;
     }
 }
-
-
-
