--- a/css/style.css
+++ b/css/style.css
@@ -576,18 +576,6 @@ section {
     border: 2px solid var(--primary-color);
 }
 
-.popular-badge {
-    position: absolute;
-    top: -10px;
-    right: 20px;
-    background-color: var(--primary-color);
-    color: var(--white);
-    padding: 5px 15px;
-    border-radius: 20px;
-    font-size: 0.8rem;
-    font-weight: 600;
-}
-
 .plan-header {
     padding: 30px;
     text-align: center;
@@ -632,6 +620,18 @@ section {
 .plan-footer {
     padding: 0 30px 30px;
     text-align: center;
+}
+
+
+.customer-support-list {
+    width: 50%;
+    margin: auto auto;
+    list-style: none;
+}
+
+.customer-support-list li {
+    font-size: 25px;
+    text-shadow: 1px 1px 3px rgba(255, 0, 0, 0.363);
 }
 
 /* FAQ Section */
