--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ section {
 
 .section-title {
     font-size: 2.5rem;
-    margin-bottom: 50px;
+    margin: 50px 0;
     text-align: center;
     color: var(--primary-color);
     position: relative;
