--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ section {
 
 /* Header Styles */
 .header {
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
